...
          title: WhiteText(
            text: "Terms and Conditions",
          ),
          backgroundColor: red,
        ),
        body: SingleChildScrollView(
          key: const Key("scroll"),
          child: Column(
            children: [
              Padding(
                padding: const EdgeInsets.all(16.0),
                child: RedText(text: "Terms are:"),
              ),
              Padding(
                padding: const EdgeInsets.all(16.0),
                child: Container(
                  height: 2000,
                  child: Column(children: [RedText(text: text)]),
...
