...
                    borderRadius: BorderRadius.circular(24.0), color: red),
                child: Column(
                  children: [
                    Padding(
                      padding: const EdgeInsets.fromLTRB(30, 18, 10, 0),
                      child: Text(
                        "Technical Events",
                        style: TextStyle(
                            fontFamily: 'Gothic',
                            fontWeight: FontWeight.w600,
                            fontSize: 25,
                            color: Colors.white),
                      ),
...
                    Padding(
                      padding: const EdgeInsets.fromLTRB(24, 0, 24, 0),
                      child: Card(
                        shape: RoundedRectangleBorder(
                            borderRadius: BorderRadius.circular(16)),
                        child: Tooltip(
                          message: 'blindcoding',
                          child: ListTile(
                            title: TextButton(
                                onPressed: () {
                                  Navigator.push(
                                    context,
                                    MaterialPageRoute(
...
